--- a/index.html
+++ b/index.html
@@ -14,11 +14,6 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-
-	<!-- 
-<link rel="stylesheet" href="css/font-awesome.min.css">
-	<link rel="stylesheet" href="css/font-awesome.css">
- -->
 	<link rel="stylesheet" href="css/animate.css">
 	<link href="css/style.css" rel="stylesheet" />	
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -109,7 +104,7 @@
 	<section id="about">
 		<div class="container">
 			<div class="center">
-				<div class="col-md-6 col-md-offset-3">
+				<div class="col-sm-6 col-sm-offset-3">
 					<h2>About Us</h2>
 					<hr>					
 					<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut</p>
